2021-06-11  Cathie Chen  <cathiechen@igalia.com>

        Use HTMLDimension to parse different HTML attribute length values
        https://bugs.webkit.org/show_bug.cgi?id=226810

        Reviewed by Darin Adler.

        * web-platform-tests/html/rendering/dimension-attributes-expected.txt:
        * web-platform-tests/html/rendering/pixel-length-attributes-expected.txt:

2021-06-10  Chris Dumez  <cdumez@apple.com>

        REGRESSION: service-workers/service-worker/credentials.https.html and content-security-policy/reporting/report-only-in-meta.sub.html failing together constantly.
        https://bugs.webkit.org/show_bug.cgi?id=226884
        <rdar://problem/79148983>

        Reviewed by Geoffrey Garen.

        Resync set-cookie.py from upsteam WPT 7f913d9d12a54858 as it had a hard-coded
        expiration for the cookie (which has just passed).

        * web-platform-tests/content-security-policy/reporting/support/set-cookie.py:
        (main):
        * web-platform-tests/cookies/resources/set-cookie.py:
        (main):

2021-06-10  Alex Christensen  <achristensen@webkit.org>

        Move Timing-Allow-Origin checks to the network process
        https://bugs.webkit.org/show_bug.cgi?id=226678
        <rdar://problem/45227788>

        Reviewed by Chris Dumez.

        * web-platform-tests/resource-timing/CodingConventions.md: Added.
        * web-platform-tests/resource-timing/SO-XO-SO-redirect-chain-tao.https-expected.txt: Added.
        * web-platform-tests/resource-timing/SO-XO-SO-redirect-chain-tao.https.html: Added.
        * web-platform-tests/resource-timing/SyntheticResponse.py:
        (main):
        * web-platform-tests/resource-timing/TAO-match-expected.txt: Added.
        * web-platform-tests/resource-timing/TAO-match.html: Added.
        * web-platform-tests/resource-timing/TAO-null-opaque-origin-expected.txt: Added.
        * web-platform-tests/resource-timing/TAO-null-opaque-origin.html: Added.