@@ -6,27 +6,51 @@
         <script src="/resources/testharnessreport.js"></script>
     </head>
     <body>
-        <script src ="routines.js"></script>
+        <script src="../service-workers/service-worker/resources/test-helpers.sub.js"></script>
         <script>
-var localChannel;
-var remoteChannel;
+async function createConnections(test, firstConnectionCallback, secondConnectionCallback)
+{
+    const pc1 = new RTCPeerConnection();
+    const pc2 = new RTCPeerConnection();
 
-async function waitForMessage(worker, data)
+    test.add_cleanup(() => pc1.close());
+    test.add_cleanup(() => pc2.close());
+
+    pc1.onicecandidate = (e) => pc2.addIceCandidate(e.candidate);
+    pc2.onicecandidate = (e) => pc1.addIceCandidate(e.candidate);
+
+    firstConnectionCallback(pc1);
+
+    const offer = await pc1.createOffer();
+    await pc1.setLocalDescription(offer);
+    await pc2.setRemoteDescription(offer);
+
+    secondConnectionCallback(pc2);
+
+    const answer = await pc2.createAnswer();
+    await pc2.setLocalDescription(answer);
+    await pc1.setRemoteDescription(answer);
+}
+
+async function waitForMessage(receiver, data)
 {
     while (true) {
-        const received = await new Promise(resolve => worker.onmessage = (event) => resolve(event.data));
+        const received = await new Promise(resolve => receiver.onmessage = (event) => resolve(event.data));
         if (data === received)
             return;
     }
 }
 
 promise_test(async (test) => {
-    worker = new Worker('datachannel-worker.js');
+    let localChannel;
+    let remoteChannel;
+
+    const worker = new Worker('transfer-datachannel-worker.js');
     let data = new Promise(resolve => worker.onmessage = (event) => resolve(event.data));
     assert_equals(await data, "registered");
 
     await new Promise((resolve, reject) => {
-        createConnections((firstConnection) => {
+        createConnections(test, (firstConnection) => {
             localChannel = firstConnection.createDataChannel('sendDataChannel');
             worker.postMessage({channel: localChannel}, [localChannel]);
 
@@ -36,7 +60,6 @@ promise_test(async (test) => {
                 remoteChannel.onopen = resolve;
             };
         });
-        setTimeout(() => reject("Test timed out"), 25000);
     });
 
     data = new Promise(resolve => worker.onmessage = (event) => resolve(event.data));
@@ -48,14 +71,18 @@ promise_test(async (test) => {
     assert_equals(await data, "OK2");
 }, "offerer data channel in workers");
 
+
 promise_test(async (test) => {
-    worker = new Worker('datachannel-worker.js');
+    let localChannel;
+    let remoteChannel;
+
+    const worker = new Worker('transfer-datachannel-worker.js');
     let data = new Promise(resolve => worker.onmessage = (event) => resolve(event.data));
     assert_equals(await data, "registered");
 
     data = new Promise(resolve => worker.onmessage = (event) => resolve(event.data));
     await new Promise((resolve, reject) => {
-        createConnections((firstConnection) => {
+        createConnections(test, (firstConnection) => {
             localChannel = firstConnection.createDataChannel('sendDataChannel');
             localChannel.onopen = resolve;
         }, (secondConnection) => {
@@ -64,7 +91,6 @@ promise_test(async (test) => {
                 worker.postMessage({channel: remoteChannel}, [remoteChannel]);
             };
         });
-        setTimeout(() => reject("Test timed out"), 25000);
     });
     assert_equals(await data, "opened");
 
@@ -78,13 +104,16 @@ promise_test(async (test) => {
 }, "answerer data channel in workers");
 
 promise_test(async (test) => {
-    worker = new Worker('datachannel-worker.js');
+    let localChannel;
+    let remoteChannel;
+
+    const worker = new Worker('transfer-datachannel-worker.js');
     let data = new Promise(resolve => worker.onmessage = (event) => resolve(event.data));
     assert_equals(await data, "registered");
 
     data = new Promise(resolve => worker.onmessage = (event) => resolve(event.data));
     await new Promise((resolve, reject) => {
-        createConnections((firstConnection) => {
+        createConnections(test, (firstConnection) => {
             localChannel = firstConnection.createDataChannel('sendDataChannel');
             worker.postMessage({channel: localChannel}, [localChannel]);
 
@@ -94,7 +123,6 @@ promise_test(async (test) => {
                 remoteChannel.onopen = resolve;
             };
         });
-        setTimeout(() => reject("Test timed out"), 25000);
     });
     assert_equals(await data, "opened");
 
@@ -105,17 +133,20 @@ promise_test(async (test) => {
 }, "data channel close event in worker");
 
 promise_test(async (test) => {
-    worker = new Worker('datachannel-worker.js');
+    let localChannel;
+    let remoteChannel;
+
+    const worker = new Worker('transfer-datachannel-worker.js');
     let data = new Promise(resolve => worker.onmessage = (event) => resolve(event.data));
     assert_equals(await data, "registered");
 
     await new Promise((resolve, reject) => {
-        createConnections((firstConnection) => {
+        createConnections(test, (firstConnection) => {
             localChannel = firstConnection.createDataChannel('sendDataChannel');
         }, (secondConnection) => {
             secondConnection.ondatachannel = (event) => {
                 remoteChannel = event.channel;
-                setTimeout(() => {
+                test.step_timeout(() => {
                     try {
                         worker.postMessage({channel: remoteChannel}, [remoteChannel]);
                         reject("postMessage ok");
@@ -125,7 +156,6 @@ promise_test(async (test) => {
                 }, 0);
             };
         });
-        setTimeout(() => reject("Test timed out"), 5000);
     });
 }, "Failing to transfer a data channel");
         </script>
